--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
       margin: auto;
       margin-top: 60px;
       margin-bottom: -35px;
-      border: 1px solid red;
+      width: 100%;
+      height: 300;
+      vertical-align: center;
+      /* border: 1px solid red; */
     }
     h4 {
       font-style: normal;
@@ -127,8 +130,6 @@
         version="1.1"
         xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink"
-        width="300"
-        height="300"
         viewBox="0, 0, 400,400"
       >
         <g id="svgg">
