fixed js blog-card-container

--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -19,7 +19,7 @@
       <a href="./blog.html"><i class="fa-solid fa-comment-dots"></i></a>
     </nav>
     <section>
-      <div class="blog-container">
+      <div id="blog-container" class="blog-container">
         <h1>Blog</h1>
         <div id="blog-card-container"></div>
       </div>
