--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -19,7 +19,7 @@
       <a href="./blog.html"><i class="fa-solid fa-comment-dots"></i></a>
     </nav>
     <section>
-      <div id="blog-container" class="blog-container">
+      <div class="blog-container">
         <h1>Blog</h1>
         <div id="blog-card-container"></div>
       </div>
@@ -61,21 +61,11 @@
     #blog-img {
       border-radius: 0.5rem;
       box-shadow: 0px -10px 60px -1px rgba(0, 0, 0, 0.7);
-      -webkit-box-shadow: 0px -10px 60px -1px rgba(0, 0, 0, 0.7);
-      -moz-box-shadow: 0px -10px 60px -1px rgba(0, 0, 0, 0.7);
       width: 70vw;
       margin-bottom: 10px;
-      /* object-fit: cover; */
-      /* object-position: 100% 100%; */
     }
     #js-card {
       background: rgb(121, 121, 121);
-      /* background: linear-gradient(
-        0deg,
-        rgba(2, 0, 36, 1) 0%,
-        rgb(65, 121, 206) 16%,
-        rgb(107, 107, 107) 100%
-      ); */
       border-radius: 1rem;
       display: grid;
       place-items: center;
