--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -41,8 +41,8 @@
       margin-top: 10px;
     }
     #blog-card-container {
-      display: grid;
-      place-items: center;
+      display: block;
+      /* place-items: center; */
       max-width: 80vw;
       max-height: 50vh;
       margin-top: 15px;
