--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -61,6 +61,7 @@
     #blog-img {
       border-radius: 0.5rem;
       box-shadow: 0px -10px 60px -1px rgba(0, 0, 0, 0.7);
+      -webkit-box-shadow: 0px -10px 60px -1px rgba(0, 0, 0, 0.7);
       width: 70vw;
       margin-bottom: 10px;
     }
