UI MENU OVERHAUL

--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -13,10 +13,20 @@
   </head>
   <body>
     <nav>
-      <a href="../index.html"><i class="fa fa-light fa-house-chimney"></i></a>
+      <div class="dropdown">
+        <button class="link"><i class="fa-solid fa-comment-dots"></i></button>
+        <div class="dropdown-menu">
+          <a href="../index.html"><i class="fa-solid fa-house-chimney"></i></a>
+          <a href="./contact.html"><i class="fa-solid fa-address-book"></i></a>
+          <a href="./projects.html"
+            ><i class="fa-solid fa-clipboard-list"></i
+          ></a>
+        </div>
+      </div>
+      <!-- <a href="../index.html"><i class="fa fa-light fa-house-chimney"></i></a>
       <a href="./contact.html"><i class="fa-solid fa-address-book"></i></a>
       <a href="./projects.html"><i class="fa-solid fa-clipboard-list"></i></a>
-      <a href="./blog.html"><i class="fa-solid fa-comment-dots"></i></a>
+      <a href="./blog.html"><i class="fa-solid fa-comment-dots"></i></a> -->
     </nav>
     <section>
       <div class="blog-container">
