UI Overhaul menu fix + launchpad

--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -9,14 +9,17 @@
       src="https://kit.fontawesome.com/be955ade18.js"
       crossorigin="anonymous"
     ></script>
+    <script src="menu.js" defer></script>
     <title>Nash's Portfolio - Blog</title>
   </head>
   <body>
     <nav>
-      <div class="dropdown">
-        <button class="link"><i class="fa-solid fa-comment-dots"></i></button>
+      <div class="dropdown" data-dropdown>
+        <button class="link" data-dropdown-button>
+          <i class="fa-solid fa-comment-dots"></i>
+        </button>
         <div class="dropdown-menu">
-          <a href="../index.html"><i class="fa-solid fa-house-chimney"></i></a>
+          <a href="./home.html"><i class="fa-solid fa-house-chimney"></i></a>
           <a href="./contact.html"><i class="fa-solid fa-address-book"></i></a>
           <a href="./projects.html"
             ><i class="fa-solid fa-clipboard-list"></i
