--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/be955ade18.js"
       crossorigin="anonymous"
     ></script>
+    <script src="menu.js" defer></script>
     <title>Nash's Portfolio - Contact</title>
   </head>
   <style>
@@ -20,10 +21,12 @@
   </style>
   <body>
     <nav>
-      <div class="dropdown">
-        <button class="link"><i class="fa-solid fa-address-book"></i></button>
+      <div class="dropdown" data-dropdown>
+        <button class="link" data-dropdown-button>
+          <i class="fa-solid fa-address-book"></i>
+        </button>
         <div class="dropdown-menu">
-          <a href="../index.html"><i class="fa-solid fa-house-chimney"></i></a>
+          <a href="./home.html"><i class="fa-solid fa-house-chimney"></i></a>
           <a href="./projects.html"
             ><i class="fa-solid fa-clipboard-list"></i
           ></a>
