--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -44,7 +44,7 @@
         <p>Email:</p>
         <a
           style="
-            color: rgb(65, 109, 175);
+            color: var(--main-color);
             font-size: 22px;
             border: none;
             display: grid;
@@ -57,7 +57,7 @@
         <p>Phone Number:</p>
         <a
           style="
-            color: rgb(65, 109, 175);
+            color: var(--main-color);
             font-size: 22px;
             border: none;
             width: auto;
