--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -40,7 +40,7 @@
     <section>
       <div class="projects-container">
         <h1>Projects</h1>
-        <p>Literally nothing.</p>
+        <p>Nothing yet.</p>
       </div>
     </section>
   </body>
