--- a/Pages/home.html
+++ b/Pages/home.html
@@ -15,6 +15,8 @@
   <style>
     :root {
       --background-color: rgb(26, 26, 26);
+      /* --main-color: rgb(65, 121, 206); */
+      --main-color: rgb(230, 94, 94);
     }
 
     #path4 {
@@ -24,7 +26,7 @@
     }
     .color-blocks {
       fill-opacity: 0;
-      stroke: rgb(65, 121, 206);
+      stroke: var(--main-color);
       stroke-width: 2.5px;
       stroke-dashoffset: 0;
       stroke-dasharray: 350;
@@ -69,15 +71,19 @@
       animation: fade 3s ease;
       animation-direction: normal;
       padding: 50px;
-      margin-bottom: 25px;
+      margin-bottom: 30px;
       stroke: black;
+      text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
     }
     .skill-list {
+      color: var(--main-color);
       font-size: 25px;
       font-style: italic;
       animation: fade 3s ease;
       animation-delay: 0ms;
       animation-direction: normal;
+      margin-bottom: 50vh;
+      text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
     }
     .svg {
       display: grid;
@@ -89,10 +95,13 @@
       height: 300;
       vertical-align: center;
       background-position: center;
+      text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
       /* border: 1px solid red; */
     }
     h4 {
       font-style: normal;
+      text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
+      margin-bottom: 10px;
     }
 
     p::before,
@@ -113,9 +122,14 @@
         left: 100%;
       }
     }
-    .fa-solid {
-      transform: scale(1.5);
+
+    li {
+      color: white;
+      margin-bottom: 10px;
     }
+    /* .fa-solid {
+      transform: scale(1.5);
+    } */
   </style>
   <body>
     <nav>
