--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
         left: 100%;
       }
     } */
+    :root {
+      /* --main-color: rgb(65, 121, 206); */
+      --main-color: rgb(230, 94, 94);
+    }
+
     h1 {
       color: white;
       display: grid;
@@ -120,9 +125,9 @@
       margin: auto;
       padding: auto;
       margin-top: 25px;
-      width: 45vw;
-      height: 8vh;
-      border: 1px solid white;
+      width: 50vw;
+      height: 8.5vh;
+      border: 1.5px solid white;
       border-radius: 0.25rem;
       box-shadow: 0px 10px 20px 7px rgba(0, 0, 0, 0.31);
     }
@@ -133,21 +138,23 @@
       margin-top: 110px;
       margin-left: 20px;
       width: 90%;
-      height: 30vh;
+      height: 20vh;
       text-align: center;
       font-style: italic;
       /* border: 1px solid red; */
       text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
     }
     p {
-      color: white;
+      color: var(--main-color);
       display: grid;
       place-items: center;
+      margin-top: 30px;
+      margin-bottom: 100px;
       /* border: 1px solid red; */
       font-style: italic;
       text-shadow: 5px 11px 6px rgba(0, 0, 0, 0.31);
     }
-    .fa-house-chimney {
+    .fa-arrows-turn-right {
       display: grid;
       place-items: center;
       margin-top: -4px;
@@ -156,12 +163,24 @@
   </style>
   <body>
     <h1>
-      <a href="./Pages/home.html"><i class="fa-solid fa-house-chimney"></i></a>
+      <a href="./Pages/home.html"
+        ><i class="fa-solid fa-arrows-turn-right"></i
+      ></a>
     </h1>
     <h2>
       "It is often the small steps, not the giant leaps, that bring about the
       most lasting change."
     </h2>
     <p>~Queen Elizabeth II</p>
+    <h2>
+      "No problem can be solved from the same level of consciousness that
+      created it."
+    </h2>
+    <p>~Albert Einstein</p>
+    <h2>
+      "Challenges are what make life interesting and overcoming them is what
+      makes life meaningful."
+    </h2>
+    <p>~Joshua J. Marine</p>
   </body>
 </html>
