--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -79,7 +79,8 @@
       margin-bottom: 10px;
     }
     #js-card {
-      background: rgb(121, 121, 121);
+      background: rgb(88, 88, 88);
+      box-shadow: 0px -10px 60px -1px rgba(0, 0, 0, 0.7);
       border-radius: 1rem;
       display: grid;
       place-items: center;
