--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -16,7 +16,7 @@
     <nav>
       <div class="dropdown" data-dropdown>
         <button class="link" data-dropdown-button>
-          <i class="fa-solid fa-comment-dots"></i>
+          <i class="fa-solid fa-comment-dots" data-dropdown-button></i>
         </button>
         <div class="dropdown-menu">
           <a href="./home.html"><i class="fa-solid fa-house-chimney"></i></a>
@@ -69,7 +69,9 @@
       font-family: monospace;
       font-style: italic;
       text-align: center;
-      margin-bottom: 15px;
+      padding: 25px;
+      margin-bottom: 2px;
+      text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
     }
     #blog-img {
       border-radius: 0.5rem;
