--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -23,7 +23,7 @@
     <nav>
       <div class="dropdown" data-dropdown>
         <button class="link" data-dropdown-button>
-          <i class="fa-solid fa-address-book"></i>
+          <i class="fa-solid fa-address-book" data-dropdown-button></i>
         </button>
         <div class="dropdown-menu">
           <a href="./home.html"><i class="fa-solid fa-house-chimney"></i></a>
@@ -33,10 +33,6 @@
           <a href="./blog.html"><i class="fa-solid fa-comment-dots"></i></a>
         </div>
       </div>
-      <!-- <a href="../index.html"><i class="fa fa-light fa-house-chimney"></i></a>
-      <a href="./contact.html"><i class="fa-solid fa-address-book"></i></a>
-      <a href="./projects.html"><i class="fa-solid fa-clipboard-list"></i></a>
-      <a href="./blog.html"><i class="fa-solid fa-comment-dots"></i></a> -->
     </nav>
     <section>
       <div class="contact-container">
