--- a/Pages/home.html
+++ b/Pages/home.html
@@ -135,7 +135,7 @@
     <nav>
       <div class="dropdown" data-dropdown>
         <button class="link" data-dropdown-button>
-          <i class="fa-solid fa-house-chimney"></i>
+          <i class="fa-solid fa-house-chimney" data-dropdown-button=""></i>
         </button>
         <div class="dropdown-menu">
           <a href="../index.html"><i class="fa-solid fa-quote-right"></i></a>
