--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -23,7 +23,7 @@
     <nav>
       <div class="dropdown" data-dropdown>
         <button class="link" data-dropdown-button>
-          <i class="fa-solid fa-clipboard-list"></i>
+          <i class="fa-solid fa-clipboard-list" data-dropdown-button></i>
         </button>
         <div class="dropdown-menu">
           <a href="./home.html"><i class="fa-solid fa-house-chimney"></i></a>
