--- a/Pages/home.html
+++ b/Pages/home.html
@@ -63,7 +63,7 @@
       display: grid;
       place-items: center;
       text-align: center;
-      height: 50vh;
+      /* height: 100%; */
     }
     .paragraph {
       font-size: 25px;
@@ -71,19 +71,36 @@
       animation: fade 3s ease;
       animation-direction: normal;
       padding: 50px;
-      margin-bottom: 30px;
+      margin-bottom: 75px;
       stroke: black;
       text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
     }
+    .skill-container {
+      background-color: rgb(58, 58, 58);
+      width: 80vw;
+      height: 100%;
+      margin-bottom: 50px;
+      display: grid;
+      place-items: center;
+      text-align: left;
+      border-radius: 0.5rem;
+      box-shadow: 4px 0px 40px -5px rgba(32, 32, 32, 0.7);
+      /* border: 1px solid red; */
+    }
     .skill-list {
       color: var(--main-color);
-      font-size: 25px;
+      max-width: 100%;
+      font-size: 23px;
       font-style: italic;
+      margin-left: 10%;
       animation: fade 3s ease;
       animation-delay: 0ms;
       animation-direction: normal;
-      margin-bottom: 50vh;
+      /* margin-bottom: 50vh; */
       text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
+      list-style: none;
+
+      /* border: 1px solid red; */
     }
     .svg {
       display: grid;
@@ -99,9 +116,10 @@
       /* border: 1px solid red; */
     }
     h4 {
+      color: rgb(230, 94, 94);
+      font-size: 35px;
       font-style: normal;
-      text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
-      margin-bottom: 10px;
+      text-shadow: 5px 4px 5px rgba(0, 0, 0, 0.31);
     }
 
     p::before,
@@ -124,18 +142,28 @@
     }
 
     li {
-      color: white;
+      color: rgb(255, 255, 255);
+
       margin-bottom: 10px;
+      /* border: 1px solid red; */
     }
-    /* .fa-solid {
-      transform: scale(1.5);
-    } */
+
+    li::before {
+      content: "•";
+      color: rgb(230, 94, 94);
+      font-size: 30px;
+      /* margin-bottom: 10px;
+      margin-right: 10px; */
+      display: inline-block;
+      width: 1em;
+      margin-left: -1em;
+    }
   </style>
   <body>
     <nav>
       <div class="dropdown" data-dropdown>
         <button class="link" data-dropdown-button>
-          <i class="fa-solid fa-house-chimney" data-dropdown-button=""></i>
+          <i class="fa-solid fa-house-chimney" data-dropdown-button></i>
         </button>
         <div class="dropdown-menu">
           <a href="../index.html"><i class="fa-solid fa-quote-right"></i></a>
@@ -146,15 +174,6 @@
           <a href="./blog.html"><i class="fa-solid fa-comment-dots"></i></a>
         </div>
       </div>
-
-      <!-- <a href="./index.html"><i class="fa-solid fa-house-chimney"></i></a> -->
-      <!-- <a href="./Pages/contact.html"
-        ><i class="fa-solid fa-address-book"></i
-      ></a>
-      <a href="./Pages/projects.html"
-        ><i class="fa-solid fa-clipboard-list"></i
-      ></a>
-      <a href="./Pages/blog.html"><i class="fa-solid fa-comment-dots"></i></a> -->
     </nav>
     <div>
       <svg
@@ -209,17 +228,18 @@
       <div class="index-container">
         <div>
           <p class="paragraph">
-            Mostly self-taught programmer. Currently working on a Bachelor's
-            degree in Computer Science with a Minor in Music. I'm excited to
-            begin my career in CS!
+            Hey there! Welcome to my website! My name is Nash and I am a mostly
+            self-taught programmer.I am currently working on a Bachelor's degree
+            in Computer Science with a Minor in Music.
           </p>
         </div>
-        <div class="skill-list">
-          <h4>Skills[3]:</h4>
-          <ul>
+        <div class="skill-container">
+          <h4>Skills:</h4>
+          <ul class="skill-list">
             <li>Critical Thinking</li>
-            <li>Friendliness</li>
-            <li>Professional Googler</li>
+            <li>HTML/CSS</li>
+            <li>Java Programming</li>
+            <li>Python</li>
           </ul>
         </div>
       </div>
