typing error fixes

--- a/Pages/home.html
+++ b/Pages/home.html
@@ -229,8 +229,8 @@
         <div>
           <p class="paragraph">
             Hey there! Welcome to my website! My name is Nash and I am a mostly
-            self-taught programmer.I am currently working on a Bachelor's degree
-            in Computer Science with a Minor in Music.
+            self-taught programmer. I am currently working on a Bachelor's
+            degree in Computer Science with a Minor in Music.
           </p>
         </div>
         <div class="skill-container">
