Projects page WIP

--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -30,16 +30,35 @@
     <section>
       <div class="blog-container">
         <h1>Blog</h1>
+        <h2>
+          Welcome to my blog! This is where I will be posting updates to the
+          website as well as new concepts that I learn.
+        </h2>
         <div id="blog-card-container"></div>
       </div>
     </section>
   </body>
   <script src="./blog.js" type="module"></script>
   <style>
+    h1 {
+      font-size: 50px;
+      margin: 10%;
+      /* margin-bottom: 10px; */
+    }
+    h2 {
+      display: grid;
+      place-items: center;
+      text-align: center;
+      margin-bottom: 50px;
+      padding: 20px;
+      font-size: 25px;
+      /* border: 1px solid red; */
+    }
     .blog-container {
       display: grid;
       place-items: center;
-      margin-top: 100px;
+      height: 150px;
+      /* margin-top: 100px; */
       margin-right: auto;
       margin-left: auto;
       width: 100%;
