--- a/Pages/home.html
+++ b/Pages/home.html
@@ -143,8 +143,8 @@
 
     li {
       color: rgb(255, 255, 255);
-
-      margin-bottom: 10px;
+      font-size: 30px;
+      margin-bottom: 5px;
       /* border: 1px solid red; */
     }
 
