--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -17,7 +17,7 @@
       display: grid;
       place-items: center;
       height: 150px;
-      border: 1px solid red;
+      /* border: 1px solid red; */
     }
     .header-block {
       display: grid;
@@ -30,7 +30,7 @@
       padding: 0% 65%;
       box-shadow: 4px 5px 10px 3px rgba(0, 0, 0, 0.7);
       background-color: rgb(219, 219, 219);
-      border: 1px solid red;
+      /* border: 1px solid red; */
     }
     .title {
       display: grid;
@@ -38,32 +38,32 @@
       margin-bottom: 50px;
       font-family: monospace;
       color: var(--main-color);
-      border: 1px solid red;
+      /* border: 1px solid red; */
     }
     .project-desc {
       display: grid;
       place-items: center;
       margin: 35px;
       margin-top: 25%;
-      border: 1px solid red;
+      /* border: 1px solid red; */
     }
     .button-links {
       font-size: 25px;
       font-family: monospace;
       margin-bottom: 15px;
       /* border: 5px solid black; */
-      border: 1px solid red;
+      /* border: 1px solid red; */
     }
     .project {
       display: grid;
       place-items: center;
-      border: 1px solid red;
+      /* border: 1px solid red; */
     }
     h1 {
       font-size: 50px;
       margin: 10%;
       /* margin-bottom: 10px; */
-      border: 1px solid red;
+      /* border: 1px solid red; */
     }
     h2 {
       display: grid;
@@ -73,7 +73,6 @@
       padding: 20px;
       font-size: 25px;
       /* border: 1px solid red; */
-      border: 1px solid red;
     }
   </style>
   <body>
