--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -100,8 +100,8 @@
           <h2 class="title">Project Title</h2>
           <img src="" alt="PROJECT-IMG" />
           <p class="project-desc">Project description...</p>
-          <!-- <button class="button-links">Demo</button>
-          <button class="button-links">GitHub</button> -->
+          <button class="button-links">Demo</button>
+          <button class="button-links">GitHub</button>
         </div>
       </div>
     </section>
