projects padding fix

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -27,7 +27,11 @@
       border-radius: 0.1rem;
       margin-top: 15%;
       margin-bottom: 10%;
-      /* padding: 0% 65%; */
+      padding: 10px 150px;
+      /* padding-top: 10px;
+      padding-bottom: 10px;
+      padding-left: 150px;
+      padding-right: 150px; */
       box-shadow: 4px 5px 10px 3px rgba(0, 0, 0, 0.7);
       background-color: rgb(219, 219, 219);
       /* border: 1px solid red; */
