--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -95,7 +95,18 @@
     <section>
       <div class="projects-container">
         <h1>Projects</h1>
-        <p>Nothing yet.</p>
+        <h2>
+          Here are some projects that I have worked on in the past! Feel free to
+          contact me regarding any more information on them.
+        </h2>
+        <div class="project">
+          <h2 class="header-block">#1</h2>
+          <h2 class="title">Project Title</h2>
+          <img src="" alt="PROJECT-IMG" />
+          <p class="project-desc">Project description...</p>
+          <button class="button-links">Demo</button>
+          <button class="button-links">GitHub</button>
+        </div>
       </div>
     </section>
   </body>
