github button fix?

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -136,7 +136,7 @@
           <p class="project-desc">
             This is a simple weather app where a user can input any city in the
             US, or any country, and it will display various information about
-            that location's weather!
+            that location's weather.
           </p>
           <button class="button-links" src="">Demo</button>
           <button class="button-links">
