weather app link

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -138,7 +138,13 @@
             US, or any country, and it will display various information about
             that location's weather.
           </p>
-          <button class="button-links" src="">Demo</button>
+          <button class="button-links" src="">
+            <a
+              class="github-link"
+              href="https://nashblount-weather-app.netlify.app/"
+            ></a
+            >Demo
+          </button>
           <button class="button-links">
             <a
               class="github-link"
