--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -101,8 +101,12 @@
       border: 3px solid white;
     }
     .github-link {
-      font-size: 0px;
-      margin: -30px;
+      font-size: 30px;
+      color: var(--main-color);
+      font-family: monospace;
+      margin: -10px;
+      height: 50px;
+      /* border: 1px solid red; */
     }
   </style>
   <body>
@@ -142,15 +146,15 @@
             <a
               class="github-link"
               href="https://nashblount-weather-app.netlify.app/"
-            ></a
-            >Demo
+              >Demo</a
+            >
           </button>
           <button class="button-links">
             <a
               class="github-link"
               href="https://github.com/nsblount111300/Weather-App"
-            ></a
-            >GitHub
+              >GitHub</a
+            >
           </button>
           <h2 class="header-block">#2</h2>
           <h2 class="title">Project Name</h2>
