--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -28,10 +28,6 @@
       margin-top: 20%;
       margin-bottom: 10%;
       padding: 10px 150px;
-      /* padding-top: 10px;
-      padding-bottom: 10px;
-      padding-left: 150px;
-      padding-right: 150px; */
       box-shadow: 4px 5px 10px 3px rgba(0, 0, 0, 0.7);
       text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
       background-color: rgb(219, 219, 219);
@@ -70,8 +66,6 @@
       color: var(--main-color);
       background-color: rgb(59, 59, 59);
       box-shadow: 1px 5px 10px 3px rgba(0, 0, 0, 0.7);
-      /* margin-bottom: 10px; */
-      /* border: 5px solid black; */
       /* border: 1px solid red; */
     }
     .project {
@@ -83,7 +77,6 @@
       font-size: 50px;
       margin: 10%;
       text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
-      /* margin-bottom: 10px; */
       /* border: 1px solid red; */
     }
     h2 {
@@ -157,12 +150,29 @@
             >
           </button>
           <h2 class="header-block">#2</h2>
-          <h2 class="title">Project Name</h2>
-          <img class="project-img" src="" alt="PROJECT-IMG" />
-          <p class="project-desc">Project description...</p>
-          <button class="button-links" src="">Demo</button>
+          <h2 class="title">Song Lyric Finder</h2>
+          <img
+            class="project-img"
+            src="../Images/song-lyrics-app.png"
+            alt="PROJECT-IMG"
+          />
+          <p class="project-desc">
+            This app allows a user to input a band name along with the title of
+            the song to instantly get the lyrics to a song!
+          </p>
           <button class="button-links">
-            <a class="github-link" href=""></a>GitHub
+            <a
+              class="github-link"
+              href="https://nb-song-lyrics-app.netlify.app/"
+              >Demo</a
+            >
+          </button>
+          <button class="button-links">
+            <a
+              class="github-link"
+              href="https://github.com/nsblount111300/Song-Lyrics-App"
+              >GitHub</a
+            >
           </button>
         </div>
       </div>
