menu button centering

--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -13,21 +13,27 @@
     <title>Nash's Portfolio - Blog</title>
   </head>
   <body>
-    <nav>
-      <div class="dropdown" data-dropdown>
-        <button class="link" data-dropdown-button>
-          <i class="fa-solid fa-comment-dots" data-dropdown-button></i>
-        </button>
-        <div class="dropdown-menu">
-          <a href="./home.html"><i class="fa-solid fa-house-chimney"></i></a>
-          <a href="./contact.html"><i class="fa-solid fa-address-book"></i></a>
-          <a href="./projects.html"
-            ><i class="fa-solid fa-clipboard-list"></i
-          ></a>
-        </div>
-      </div>
-    </nav>
     <section>
+      <nav>
+        <h1 class="home-button">
+          <div class="dropdown" data-dropdown>
+            <button class="link" data-dropdown-button>
+              <i class="fa-solid fa-comment-dots" data-dropdown-button></i>
+            </button>
+            <div class="dropdown-menu">
+              <a href="./home.html"
+                ><i class="fa-solid fa-house-chimney"></i
+              ></a>
+              <a href="./contact.html"
+                ><i class="fa-solid fa-address-book"></i
+              ></a>
+              <a href="./projects.html"
+                ><i class="fa-solid fa-clipboard-list"></i
+              ></a>
+            </div>
+          </div>
+        </h1>
+      </nav>
       <div class="blog-container">
         <h1>Blog</h1>
         <h2>
@@ -43,6 +49,7 @@
     h1 {
       font-size: 50px;
       margin: 10%;
+      margin-top: 150px;
       /* margin-bottom: 10px; */
     }
     h2 {
