--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -20,21 +20,25 @@
     }
   </style>
   <body>
-    <nav>
-      <div class="dropdown" data-dropdown>
-        <button class="link" data-dropdown-button>
-          <i class="fa-solid fa-address-book" data-dropdown-button></i>
-        </button>
-        <div class="dropdown-menu">
-          <a href="./home.html"><i class="fa-solid fa-house-chimney"></i></a>
-          <a href="./projects.html"
-            ><i class="fa-solid fa-clipboard-list"></i
-          ></a>
-          <a href="./blog.html"><i class="fa-solid fa-comment-dots"></i></a>
-        </div>
-      </div>
-    </nav>
     <section>
+      <nav>
+        <h1 class="home-button">
+          <div class="dropdown" data-dropdown>
+            <button class="link" data-dropdown-button>
+              <i class="fa-solid fa-address-book" data-dropdown-button></i>
+            </button>
+            <div class="dropdown-menu">
+              <a href="./home.html"
+                ><i class="fa-solid fa-house-chimney"></i
+              ></a>
+              <a href="./projects.html"
+                ><i class="fa-solid fa-clipboard-list"></i
+              ></a>
+              <a href="./blog.html"><i class="fa-solid fa-comment-dots"></i></a>
+            </div>
+          </div>
+        </h1>
+      </nav>
       <div class="contact-container">
         <h1>Contact</h1>
         <p>Email:</p>
