--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -16,7 +16,8 @@
     .projects-container {
       display: grid;
       place-items: center;
-      height: 150px;
+      margin-top: 25px;
+      height: 5px;
       /* border: 1px solid red; */
     }
     .header-block {
@@ -76,6 +77,7 @@
     h1 {
       font-size: 50px;
       margin: 10%;
+      margin-top: 100px;
       text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
       /* border: 1px solid red; */
     }
@@ -103,19 +105,25 @@
     }
   </style>
   <body>
-    <nav>
-      <div class="dropdown" data-dropdown>
-        <button class="link" data-dropdown-button>
-          <i class="fa-solid fa-clipboard-list" data-dropdown-button></i>
-        </button>
-        <div class="dropdown-menu">
-          <a href="./home.html"><i class="fa-solid fa-house-chimney"></i></a>
-          <a href="./contact.html"><i class="fa-solid fa-address-book"></i></a>
-          <a href="./blog.html"><i class="fa-solid fa-comment-dots"></i></a>
-        </div>
-      </div>
-    </nav>
     <section>
+      <nav>
+        <h1 class="home-button">
+          <div class="dropdown" data-dropdown>
+            <button class="link" data-dropdown-button>
+              <i class="fa-solid fa-clipboard-list" data-dropdown-button></i>
+            </button>
+            <div class="dropdown-menu">
+              <a href="./home.html"
+                ><i class="fa-solid fa-house-chimney"></i
+              ></a>
+              <a href="./contact.html"
+                ><i class="fa-solid fa-address-book"></i
+              ></a>
+              <a href="./blog.html"><i class="fa-solid fa-comment-dots"></i></a>
+            </div>
+          </div>
+        </h1>
+      </nav>
       <div class="projects-container">
         <h1>Projects</h1>
         <h2 class="header-desc">
