--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
       margin-top: -4px;
       transform: scale(1);
     }
+    body {
+      margin-top: 110px;
+    }
   </style>
   <body>
     <h1>
