MEDIA RAGE STUFF

--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -15,7 +15,7 @@
   <body>
     <section>
       <nav>
-        <h1 class="home-button">
+        <div class="home-button">
           <div class="dropdown" data-dropdown>
             <button class="link" data-dropdown-button>
               <i class="fa-solid fa-comment-dots" data-dropdown-button></i>
@@ -32,7 +32,7 @@
               ></a>
             </div>
           </div>
-        </h1>
+        </div>
       </nav>
       <div class="blog-container">
         <h1>Blog</h1>
@@ -49,7 +49,7 @@
     h1 {
       font-size: 50px;
       margin: 10%;
-      margin-top: 200px;
+      margin-top: 300px;
       /* margin-bottom: 10px; */
     }
     h2 {
