--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -22,7 +22,7 @@
   <body>
     <section>
       <nav>
-        <h1 class="home-button">
+        <div class="home-button">
           <div class="dropdown" data-dropdown>
             <button class="link" data-dropdown-button>
               <i class="fa-solid fa-address-book" data-dropdown-button></i>
@@ -37,7 +37,7 @@
               <a href="./blog.html"><i class="fa-solid fa-comment-dots"></i></a>
             </div>
           </div>
-        </h1>
+        </div>
       </nav>
       <div class="contact-container">
         <h1>Contact</h1>
