--- a/Pages/home.html
+++ b/Pages/home.html
@@ -77,7 +77,7 @@
     }
     .skill-container {
       background-color: rgb(58, 58, 58);
-      width: 80vw;
+      width: 80%;
       height: 100%;
       margin-bottom: 50px;
       display: grid;
@@ -105,9 +105,7 @@
     .svg {
       display: grid;
       place-items: center;
-      /* margin: auto; */
-      margin-top: 35%;
-      /* margin-bottom: -35px; */
+      margin-top: 300px;
       width: 400px;
       height: 400px;
       vertical-align: center;
@@ -162,7 +160,7 @@
   <body>
     <section>
       <nav>
-        <h1 class="home-button">
+        <div class="home-button">
           <div class="dropdown" data-dropdown>
             <button class="link" data-dropdown-button>
               <i class="fa-solid fa-house-chimney" data-dropdown-button></i>
@@ -180,7 +178,7 @@
               <a href="./blog.html"><i class="fa-solid fa-comment-dots"></i></a>
             </div>
           </div>
-        </h1>
+        </div>
       </nav>
       <div>
         <svg
