MEDIA STUFF AGAIN

--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -36,7 +36,7 @@
       </nav>
       <div class="blog-container">
         <h1>Blog</h1>
-        <h2>
+        <h2 class="blog-page-desc">
           Welcome to my blog! This is where I will be posting updates to the
           website as well as new concepts that I learn.
         </h2>
@@ -91,8 +91,10 @@
       font-family: monospace;
       font-style: italic;
       text-align: center;
-      padding: 25px;
-      margin-bottom: 2px;
+      padding: 0px 25px;
+      /* padding-top: 25px; */
+      padding-bottom: 20px;
+      /* margin-bottom: 2px; */
       text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
     }
     #blog-img {
