--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -93,8 +93,8 @@
       /* border: 1px solid red; */
     }
     .project-img {
-      max-width: 400px;
-      max-height: 300px;
+      width: 400px;
+     height: 300px;
       margin-bottom: 5%;
       border: 3px solid white;
     }
@@ -145,7 +145,7 @@
           <div class="project">
 
               <h2 class="header-block">#1</h2>
-              <h2 class="title">Simple Weather App</h2>
+              <h2 class="title one">Simple Weather App</h2>
               <img
                 class="project-img"
                 src="../Images/project-page-image-1.png"
@@ -173,15 +173,15 @@
               </div> 
               <div class="project">
                 <h2 class="header-block">#2</h2>
-                <h2 class="title">Song Lyric Finder</h2>
+                <h2 class="title two">Song Lyric Finder</h2>
                 <img
                   class="project-img"
-                  src="../Images/song-lyrics-app.png"
+                  src="../Images/song-lyrics-app-resized.png"
                   alt="PROJECT-IMG"
                 />
                 <p class="project-desc">
                   This app allows a user to input a band name along with the title
-                  of the song to instantly get the lyrics to a song!
+                  of the song to instantly get the lyrics to a song. This is pretty useful if you don't want to go through Google to find lyrics!
                 </p>
                 <button class="button-links">
                   <a
