--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     }
   </style>
   <body>
-    <h1>
+    <h1 class="arrow">
       <a href="./Pages/home.html"
         ><i class="fa-solid fa-arrows-turn-right"></i
       ></a>
